<resources>
    <string name="app_name">Doghry Food</string>
    <string name="select_res">Select <b>Restaurant</b></string>
    <string name="next">next</string>
    <string name="slide1_text">Order fromthe best local restaurants with easy, on-demand delivery.</string>
    <string name="order_food">Order <b>Food</b></string>
    <string name="slide2_text">Easily find the type of food your\'re craving.</string>
    <string name="get_started">Get Started</string>
    <string name="deliver_to_home">Deliver to Home</string>
    <string name="slide3_text">To get your order, Our delivery executives deliver at your door step</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pass_text">Forgot your password?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="conirm_pass">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="email_text_forgot">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="verify_phone_no">Verify Phone Number</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_mobile_text">We have sent you on SMS with a code to number +91 9898787656</string>
    <string name="verify_email_text">We have sent you on SMS with a code to email abc@gmail.com</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="confirm">Confirm</string>
    <string name="don_have_an_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="enter_otp_code_text">Enter your OTP code here</string>
    <string name="resend_text">Resend a new code</string>
    <string name="anoterway">Another Way</string>
    <string name="didn_t_you_received_any_code">Didn\'t you received any code?</string>
</resources>