<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:layout_gravity="end"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_12sdp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_email_text"
            android:layout_gravity="end"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_12sdp"/>

        <EditText
            android:id="@+id/emailOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:textSize="@dimen/_12sdp"
            android:inputType="textVisiblePassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:background="@drawable/gray_light"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_20"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/confirm" />

    </LinearLayout>

</layout>