<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_phone_no"
                android:layout_gravity="end"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_12sdp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_mobile_text"
            android:layout_gravity="end"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_12sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_15sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:contentPadding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    app:ccp_textSize="@dimen/_12sdp"
                    app:ccp_defaultPhoneCode="91"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    android:singleLine="true"
                    android:background="@null"
                    android:drawablePadding="@dimen/_10sdp"
                    android:maxLength="13"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:inputType="number"
                    android:hint="@string/mobile_no"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/txtAnother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anoterway"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/orange"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_12sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_20"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/confirm" />

    </LinearLayout>

</layout>