<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="@dimen/_110sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:src="@drawable/yellow_shadow_back"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:layout_gravity="end"
                        android:fontFamily="@font/roboto_bold"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/_35sdp"/>

                </RelativeLayout>


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="@dimen/_15sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="textVisiblePassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:background="@drawable/gray_light"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:padding="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:singleLine="true"
                    android:background="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:background="@drawable/gray_light"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/conirm_pass"
                    android:padding="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:singleLine="true"
                    android:background="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:background="@drawable/gray_light"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue_20"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/sign_up" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_account"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textStyle="bold"
                        android:textColor="@color/blue" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:background="@drawable/outline_red"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/google_plus"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/google"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/outline_blue"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/fb"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/fb_blue"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/facebook"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</layout>